# enzuel.core

./: .env.example  Cargo.toml  Dockerfile
backend/: main.rs
frontend/src/: App.tsx
frontend/src/containers/: LoginPage.tsx
frontend/src/hooks/: useAuth.tsx
migrations/00000000000004_plugin_auth_oidc/: down.sql  up.sql
migrations/00000000000005_plugin_storage/: down.sql  up.sql
migrations/00000000000006_plugin_tasks/: up.sql
