[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "queue"
path = "backend/queue.rs"

[[bin]]
name = "async_queue"
path = "backend/async_queue.rs"

[[bin]]
name = "core-service"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
dsync = "0"
fang = "0.10.4"
futures-util = "0.3.21"
utoipa-swagger-ui = { version="4", features=["actix-web"]}
serde_json = "1.0.79"
simple_logger = "4.3.3"
tsync = "1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.create-rust-app]
default-features = false
features = ["plugin_auth", "plugin_auth-oidc", "plugin_container", "plugin_storage", "plugin_tasks", "plugin_utoipa", "plugin_dev", "database_postgres", "backend_actix-web"]
version = "11.0.0"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.0.0-rc.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.utoipa]
features = ["actix_extras", "chrono", "openapi_extensions"]
version = "4"

[package]
default-run = "core-service"
edition = "2021"
name = "core-service"
publish = false
version = "0.1.0"

[profile.dev]
debug-assertions = true
